# django_blog

./: .gitignore  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment.py  0004_post_tags.py
blog/templates/blog/post/: comment.html  detail.html  list.html  share.html
config/: settings.py  urls.py
mysite/: db.sqlite3
mysite/blog/: models.py  views.py
mysite/blog/templates/blog/: base.html
mysite/blog/templates/blog/post/: list.html
mysite/config/: settings.py
mysite/mysite/: settings.py  urls.py
